# taskplanner_django

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt  tach.toml  test_todoist_api.py
.claude/: settings.local.json
docs/: implementation.md  plan.md
docs/plans/: remove-wagtail-refactor.md
static_src/css/: base.css
taskplanner/: asgi.py  settings.py  urls.py  wsgi.py
taskplanner/settings/: base.py  dev.py  prod.py  test.py
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
tasks/management/commands/: list_todoist_projects.py  list_todoist_sections.py
tasks/migrations/: 0001_initial.py  0002_alter_croptaskgrouptemplate_options.py  0002_alter_taskgrouptemplate_tasks.py  0002_croptask_crop.py  0003_croptaskgrouptemplate.py  0003_taskplannersettings.py  0004_delete_taskplannersettings.py  0005_remove_taskgrouptemplate_tokens_taskplannersettings.py  0006_taskgrouptemplate_description_and_more.py  0007_taskplannersettings_todoist_project_id.py  0008_labelsectionrule.py  0009_taskplannersettings_source_section_id.py  0010_remove_taskplannersettings_source_section_id_and_more.py  0011_migrate_to_todosync.py  0012_croptasktemplate_remove_taskgrouptemplate_page_ptr_and_more.py  0013_croptask_and_more.py  0014_fix_page_content_types.py
tasks/static/tasks/css/: styles.css
tasks/templates/: base.html
tasks/templates/tasks/: create_task_group.html  crop_task_template.html  croptaskgrouptemplate_form.html  task_group_template.html
templates/: base.html  home.html  template_list.html  template_tasks.html
