[project]
name = "taskplanner"
version = "0.1.0"
description = "task planning app"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2.8",
    "django-click>=2.4.1",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "todoist-api-python>=3.1.0",
    "todosync-django",
    "wagtail>=7.2",
]

[tool.uv.sources]
todosync-django = { path = "../todosync_django", editable = true }

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
]
